# teknokent-scraper

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
email_automation/: email_client.py  email_parser.py  inbox_scraper.py
linkedin_scraper/: captcha_solver.py  companies.json  firefox_scraper.py  linkedin_company_scraper.py  out.csv  safari_scraper.py  search_results_scraper.py
teknokent_scraper/: scrapy.cfg
teknokent_scraper/teknokent_scraper/: items.py  middlewares.py  pipelines.py  settings.py
teknokent_scraper/teknokent_scraper/outputs/ANKARA_UNI/: companies_ankara_teknokent_comprehensive.csv  companies_ankara_teknokent_comprehensive.json
teknokent_scraper/teknokent_scraper/outputs/BILKENT_CYBERPARK/: companies_bilkent.csv  companies_bilkent.json
teknokent_scraper/teknokent_scraper/outputs/EGE_TEKNOKENT/: ege_teknopark_companies.csv  ege_teknopark_companies.json
teknokent_scraper/teknokent_scraper/outputs/GAZI_TEKNOKENT/: companies_gazi.csv  companies_gazi.json  gazi_companies.json
teknokent_scraper/teknokent_scraper/spiders/: ankara_teknokent_comprehensive.py  bilkent_teknokent_spider.py  ege_teknokpark.py  gazi_teknokent_spider.py  hacettepe_teknokent_spider.py  itu_teknokent_spider.py  izmir_teknopark.py  odtu_teknokent.py
teknokent_scraper_logging/: logger.py
tests/: __init__.py  test_email_parser.py  test_extraction_patterns.py  test_real_email_structure.py
utils/: categorize_emails.py  dump_linkedin_raw.py  dump_other_emails_raw.py  export_linkedin_emails.py  merge_csv_files.py
(+9 files in other folders)
