[project]
name = "teknokent-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "drissionpage>=4.1.1.2",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "scrapy>=2.13.3",
    "scrapy-playwright>=0.0.44",
    "scrapy-user-agents>=0.1.1",
    "selenium>=4.35.0",
    "selenium-recaptcha>=1.0.7",
    "selenium-stealth>=1.0.6",
    "speechrecognition>=3.14.3",
    "webdriver-manager>=4.0.2",
]
